[package]
name = "pyrocast"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.2"
chrono = "0.4.15"
database = { path = "../database" }
libhandy = "0.6.0"
loader = { path = "../loader" }
pango = "0.9.0"
player = { path = "../player" }
pretty_env_logger = "0.4.0"
state = { path = "../state" }
vgtk = "0.3.0"
xml-rs = "0.8.3"
