[package]
name = "cli"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loader = { path = "../loader" }
state = { path = "../state" }
async-std = "1.6.2"
