[package]
name = "database"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "3.0.1"
sqlite = "0.25.3"
state = { path = "../state" }
loader = { path = "../loader" }
