[package]
name = "loader"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
serde = "1.0.97"
serde_json = "1.0.40"
serde-xml-rs = "0.4.0"
surf = { version ="2.0.0-alpha.4", features = ["h1-client"], default-features = false }
state = { path = "../state" }
async-std = "1.6.2"

