[package]
name = "player"
version = "0.1.0"
authors = ["Joshua Netterfield <joshua@nettek.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9.1"
glib = "0.10.1"
gstreamer = "0.16.2"
gstreamer-player = "0.16.0"
gtk = "0.9.2"
mpris-player = "0.6.0"
state = { path = "../state" }
